--- a/leetcode-all.ipynb
+++ b/leetcode-all.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[(2, 1), (3, 0), (4, 2)]\n",
       "[1, 2]\n"
      ]
     }
@@ -20,6 +21,7 @@
     "    # two point\n",
     "    nums_index = [(v, index) for index, v in enumerate(nums)]\n",
     "    nums_index.sort()\n",
+    "    print(nums_index)\n",
     "    begin, end = 0, len(nums) - 1\n",
     "    while begin < end:\n",
     "        curr = nums_index[begin][0] + nums_index[end][0]\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
