--- a/leetcode-all.ipynb
+++ b/leetcode-all.ipynb
@@ -69,6 +69,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tong 2 so 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum(a, b):\n",
+    "    return a+b\n",
+    "\n",
+    "\n",
+    "print(\"tong 2 so\",sum(3, 4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
