--- a/leetcode-all.ipynb
+++ b/leetcode-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,6 @@
    ],
    "source": [
     "# Tow Sum\n",
-    "\n",
     "def twoSum(nums, target):\n",
     "    # two point\n",
     "    nums_index = [(v, index) for index, v in enumerate(nums)]\n",
@@ -69,23 +68,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tong 2 so 7\n"
+      "12121\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "def sum(a, b):\n",
-    "    return a+b\n",
-    "\n",
-    "\n",
-    "print(\"tong 2 so\",sum(3, 4))\n"
+    "# Palindrome Number\n",
+    "def isPalindrome( x: int) -> bool:\n",
+    "        x = str(x)\n",
+    "        print(x[::-1])\n",
+    "        if (x == x[::-1]):\n",
+    "            \n",
+    "            return True\n",
+    "        return False        \n",
+    "print(isPalindrome(12121))   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"helo\")"
    ]
   },
   {
