--- a/leetcode-all.ipynb
+++ b/leetcode-all.ipynb
@@ -109,6 +109,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "def romanToInt(s: str) -> int:\n",
+    "    ans = 0\n",
+    "    roman = {'I': 1, 'V': 5, 'X': 10, 'L': 50,\n",
+    "             'C': 100, 'D': 500, 'M': 1000}\n",
+    "    for a, b in zip(s, s[1:]):\n",
+    "        if roman[a] < roman[b]:\n",
+    "            ans = -roman[a]\n",
+    "            print(ans)\n",
+    "        else:\n",
+    "            ans += roman[a]\n",
+    "    return ans+roman[s[-1]]\n",
+    "\n",
+    "print(romanToInt(\"IXX\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
