--- a/leetcode-all.ipynb
+++ b/leetcode-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +136,72 @@
     "    return ans+roman[s[-1]]\n",
     "\n",
     "print(romanToInt(\"IXX\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tu lam twosum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# color flowers in python \n",
+    "import turtle\n",
+    "\n",
+    "from pyparsing import col\n",
+    "t=turtle.Turtle()\n",
+    "s=turtle.Screen()\n",
+    "s.bgcolor('black')\n",
+    "t.speed(0)\n",
+    "col=(\"yellow\",\"red\",\"pink\",\"cyan\",\"light green\",\"blue\")\n",
+    "\n",
+    "for i in range(150):\n",
+    "    t.pencolor(col[i%6])\n",
+    "    t.circle(190-i/2,90)\n",
+    "    t.lt(90)\n",
+    "    t.circle(190-i/3,90)\n",
+    "    t.lt(60)\n",
+    "s.exitonclick()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['flower', 'flow', 'flight']\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Longest Common Prefix\n",
+    "\n",
+    "\n",
+    "\n",
+    "strs = [\"flower\",\"flow\",\"flight\"]\n",
+    "print(strs)\n",
+    "for i in range(len(strs[0])):\n",
+    "   for j in range(1, len(strs)):\n",
+    "        if i == len(strs[j]) or strs[j][i] != strs[0][i]:\n",
+    "          return strs[0][:i]"
    ]
   },
   {
